# OpenIrrigation

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  INSTALL.debian.md  INSTALL.md  INSTALL.raspbian.md  Makefile  Makefile.params  README.TDI  README.md  TODO  config  eslint.config.mjs  package-lock.json  package.json  phpstan.neon  pyproject.toml  requirements-dev.txt
database/: .gitignore  ET.codes.sql  ET.schema.sql  FetchTable.py  Makefile  README.md  check_schema.py  commands.schema  commands.schema.sql  commands.view  db.ET.sql  db.changelog.sql  db.crop.sql  db.funcs.sql  db.list.sql  db.params.sql  db.schema.sql  db.site.sql  db.soil.sql  extract.site.py  extractCmd.py  extractPar.py  gen.py  irrigation.crop  irrigation.init  irrigation.schema  migrate_001.py  migrate_002.py  migrate_003.py  migrate_004.py  migrate_005.py  migrate_006.py  migrate_007.py  params.crop.sql  params.init  params.init.sql  params.schema  params.schema.sql  params.site  params.site.sql  (+3 more)
public_html/: ET.php  ETStn.php  ETannual.php  Makefile  README.md  controller.php  crop.php  email.php  etAnnual.php  etDaily.php  event.php  flowGraph.php  flowGraphData.php  groups.php  index.php  indexProcess.php  indexStatus.php  monitor.php  monitorActiveOff.php  monitorAllOff.php  monitorClearAll.php  monitorPendingRemove.php  monitorPocOff.php  monitorProcAction.php  monitorStatus.php  params.php  poc.php  pocFlow.php  pocMV.php  pocPump.php  processState.php  processStatus.php  program.php  programEvent.php  programStation.php  report.php  reportDaily.php  reportDailyStatus.php  runScheduler.php  running.php  (+15 more)
scripts/: AgriMet.py  DB.py  Events.py  Makefile  MyBaseThread.py  MyLogger.py  Notify.py  Params.py  Programs.py  README.md  SchedAction.py  SchedCumTime.py  SchedEvent.py  SchedInterval.py  SchedMain.py  SchedPlacer.py  SchedProgram.py  SchedProgramStation.py  SchedResource.py  SchedSensor.py  (+15 more)
(+86 files in other folders)
