[project]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = [
    "E501",   # line too long (existing code has varied line lengths)
    "E701",   # multiple statements on one line (existing code style)
    "E741",   # ambiguous variable names (existing code uses short names)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E402"]
"scripts/TDISimulate.py" = ["F821"]  # pre-existing bug: `fd` should be `self.fd`

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "tests"]
addopts = "--tb=short"
